tests/negative/test_sizeof_undef_tup.orb
data Foo;

fnc main () () {
    sizeOf (i32 Foo);
};